[gd_scene load_steps=4 format=2]

[ext_resource path="res://Collectible.gd" type="Script" id=1]
[ext_resource path="res://Assets/Credit.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 45.0842

[node name="Collectible" type="RigidBody2D"]
gravity_scale = 0.0
contacts_reported = 3
contact_monitor = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.027451, 0.976471, 0.862745, 1 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="DisappearTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Collectible_body_entered"]
[connection signal="timeout" from="DisappearTimer" to="." method="_on_DisappearTimer_timeout"]
